# rclogic_src

./: Cargo.toml  Dioxus.toml
src/: main.rs
src/components/: about.rs  first_order_logic.rs  intuitionistic_logic.rs  modal_logic.rs  propositional_logic.rs
