[package]
name = "rclogic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4"
dioxus-web = "0.4"
nom = "7.1.3"
wasm-bindgen = "0.2.84"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.20"
console_log = "1.0.0"
dioxus-logger = "0.4.1"

[dev-dependencies]
proptest = "1.1.0"
